# desktop-buddy

./: .gitignore  package-lock.json  package.json
sidecar-tts/: server.py
src/: App.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: RecordButton.jsx
src/hooks/: useMacDictation.js  useSnapToCorner.js
